tests/snapshots/render/dumb@commonmark-spec-076-atx_headings.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/076-atx_headings.md
snapshot_kind: text
---
foo ###

foo ###
────────────────────────────────────────────────────────────────────────────────

foo #
════════════════════════════════════════════════════════════════════════════════
